--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.119",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@wavesurfer/react": "^1.0.7",
     "axios": "^1.7.9",
     "cra-template-pwa": "^2.0.0",
     "react": "^18.3.1",
@@ -21,6 +22,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "wavesurfer.js": "^7.8.11",
     "web-vitals": "^2.1.4",
     "zustand": "^5.0.1"
   },
