--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.0",
     "typescript": "^4.9.5",
     "wavesurfer.js": "^7.8.11",
     "web-vitals": "^2.1.4",
